// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`input render default 1`] = `

<div>
  <input class="border-input bg-background ring-offset-background placeholder:text-muted-foreground focus-visible:ring-ring clear-none flex h-10 w-full rounded-md border px-3 py-2 text-sm file:border-0 file:bg-transparent file:text-sm file:font-medium focus-visible:ring-2 focus-visible:ring-offset-2 focus-visible:outline-none disabled:cursor-not-allowed disabled:opacity-50 dark:bg-neutral-900">
</div>

`;

exports[`input render with custom classname 1`] = `

<div>
  <input class="border-input bg-background ring-offset-background placeholder:text-muted-foreground focus-visible:ring-ring clear-none flex h-10 w-full rounded-md border px-3 py-2 text-sm file:border-0 file:bg-transparent file:text-sm file:font-medium focus-visible:ring-2 focus-visible:ring-offset-2 focus-visible:outline-none disabled:cursor-not-allowed disabled:opacity-50 dark:bg-neutral-900 custom-class">
</div>

`;

exports[`input render with type 1`] = `

<div>
  <input
    type="search"
    class="border-input bg-background ring-offset-background placeholder:text-muted-foreground focus-visible:ring-ring clear-none flex h-10 w-full rounded-md border px-3 py-2 text-sm file:border-0 file:bg-transparent file:text-sm file:font-medium focus-visible:ring-2 focus-visible:ring-offset-2 focus-visible:outline-none disabled:cursor-not-allowed disabled:opacity-50 dark:bg-neutral-900"
  >
</div>

`;
